--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@elastic/site-search-node",
   "version": "0.4.0",
-  "description": "Elastic Site Search API client",
+  "description": "Elastic Site Search API client for Node.js",
   "homepage": "https://github.com/elastic/site-search-node",
   "main": "lib/siteSearch.js",
   "author": "Mike Chlipala",
